--- a/index.ipynb
+++ b/index.ipynb
@@ -458,7 +458,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = list(citi)\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
