--- a/index.ipynb
+++ b/index.ipynb
@@ -397,11 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[11]['City']= ('PyeongChang' # 'PyeongChang'"
+    "cities[11]['City']= ('PyeongChang') # 'PyeongChang'"
    ]
   },
   {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -422,13 +422,13 @@
        "list"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities[-1].values())\n",
+    "pyeongchang_values = list(cities[11].values())\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
