--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[11]['City']= ('PyeongChang') # 'PyeongChang'"
+    "cities[11]['City']= ('PyeongChang') # 'PyeongChang'\n",
+    "cities[11]"
    ]
   },
   {
