--- a/index.ipynb
+++ b/index.ipynb
@@ -397,9 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'PyeongChang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 2581000,\n",
+       " 'Area': 3194}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities[11]['City']= ('PyeongChang') # 'PyeongChang'\n",
     "cities[11]"
