--- a/index.ipynb
+++ b/index.ipynb
@@ -474,6 +474,7 @@
    ],
    "source": [
     "pyeongchang_keys = list(cities[11].keys())\n",
+    "pyeongchang_\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
