automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -467,14 +467,14 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pyeongchang_keys = list(cities[11].keys())\n",
-    "pyeongchang_\n",
+    "pyeongchang_keys\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
