--- a/index.ipynb
+++ b/index.ipynb
@@ -458,16 +458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,8 +476,7 @@
     "pyeongchang_keys = list(cities[11].keys())\n",
     "\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
-    "type(pyeongchang_keys) # list"
+    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n"
    ]
   },
   {
