--- a/index.ipynb
+++ b/index.ipynb
@@ -458,16 +458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['City', 'Country', 'Population', 'Area']"
+       "list"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,8 @@
     "pyeongchang_keys = list(cities[11].keys())\n",
     "\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n"
+    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
+    "type(pyeongchang_keys) # list"
    ]
   },
   {
